# ADA-Lab

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  cli.py  clients.toml.b64  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ada-pipeline.yml
ada/: __init__.py  analysis.py  ci_render_index.py  ci_validate.py  clients.py  dashboard.py  hubspot.py  outbox.py  reporting.py
ada/connectors/: __init__.py  base.py  gmail_mail.py  hubspot_contacts.py  outlook_mail.py
ada/core/: schemas.py
ada/crm/: __init__.py  db.py
ada/learning/: variants.py
ada/orchestrator/: __init__.py  policy.py  templates.py
ada/store/: sqlite.py
ada/templates/: __init__.py  medium.txt  render.py  selector.py  short.txt  value_prop.txt
tests/: test_autopilot_templates.py  test_autopilot_variants.py  test_dashboard.py  test_dashboard_autopilot.py  test_dashboard_variants.py  test_gmail_connector.py  test_metrics_channels.py  test_outlook_connector.py  test_policy.py  test_policy_phase2.py  test_schemas.py  test_templates.py  test_variants.py
